# rmarshal

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  Rakefile
docs/: CLI_SYNTAX.md  LUA_PRELUDE.md  prelude.lua
src/: command.rs  help.rs  main.rs  template.rs  unit.rs  value.rs  yaml.rs
src/util/: flagged_option.rs  mod.rs
test/: app_helper.rb  engine.rb  run.rb
test/data/concat/: input02.yaml  input03.yaml
test/data/copy_json/: expect01.json  expect02.json
test/data/copy_toml/: input01.toml
test/data/copy_yaml/: expect01.yaml  expect02.yaml  input01.yaml
test/data/lua/: script02.lua
test/data/merge/: expect01.json  expect02.json  expect03.json  expect04.json  expect05.json  expect06.json  expect07.json  expect08.json  expect09.json  expect10.json  expect11.json  expect12.json  input01.yaml  input02.yaml  input03.yaml  input04.yaml  input05.yaml  input06.yaml
test/data/render/: template02.txt  template03.txt  template04.txt  template05.txt  template06.txt  template07.txt
test/data/template/: expect01.txt  template01.txt
test/data/transform/: expect01.json  expect02.json  input01.json  script01.lua  script03.lua
test/spec/: concat_spec.rb  copy_json_spec.rb  copy_spec.rb  copy_toml_spec.rb  copy_yaml_spec.rb  lua_spec.rb  merge_spec.rb  render_spec.rb  template_spec.rb  transform_spec.rb
test/spec/copy/: input01.json
test/spec/template/: input01.json
