[package]
name = "rmarshal"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "1.7"
lazy_static = "1.4"
regex = "1.5"
rlua = "0.18"
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.8"
toml = { version = "0.5", features = ["preserve_order"] }

[features]
debug = []
