[package]
name = "rmarshal"
edition = "2018"
version = "0.1.0"
authors = ["Thomas Baron"]
repository = "https://github.com/tvbaron/rmarshal"
license = "MIT"
description = "Document remarshaller."

[dependencies]
indexmap = "1.8"
lazy_static = "1.4"
regex = "1.5"
rlua = "0.18"
serde = "1.0"
serde_json = { version = "1.0", features = ["preserve_order"] }
serde_yaml = "0.8"
toml = { version = "0.5", features = ["preserve_order"] }

[features]
debug = []
